services/face-detection/kubernetes/face-detection.stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  # This name uniquely identifies the stateful set
  name: face-detection-stateful
  labels:
    app: face-detection
spec:
  serviceName: face-detection
  replicas: 1
  selector:
    matchLabels:
      app: face-detection
  template:
    metadata:
      labels:
        app: face-detection
    spec:
      containers:
      - name: face-detection
        image: ghcr.io/swiss-ai-center/core-engine-face-detection:latest
        # If you build the image locally, change the next line to `imagePullPolicy: Never` - there is no need to pull the image
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
