services/face-detection/kubernetes/face-detection.service.yml
apiVersion: v1
kind: Service
metadata:
  name: face-detection-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8686
      targetPort: 80
      protocol: TCP
  selector:
    app: face-detection
